# text-to-json

./: .gitignore  README.md  download_from_hf.py  filter_and_upload.py  generate_data.ipynb  prompt_loader.py  pyproject.toml  report.txt  requirements.txt  run_generation.py  upload_baseline_to_hf.py  upload_model_to_hf.py  upload_to_hf.py
notebooks/: generate_data.ipynb
notebooks/debug/: report_debug.txt
prompt/: SYSTEM_prompt.txt  USER_prompt.txt  json_SYSTEM_prompt.txt  json_SYSTEM_prompt_en.txt  json_SYSTEM_prompt_kr.txt  json_prompt.txt  prompt_FAQ.txt  prompt_KPI.txt  prompt_administrative.txt  prompt_analyst.txt  prompt_report.txt  prompt_verification.txt
src/: finetune_unsloth.py  generate_dpo_data.py  generate_rft_data.py  generate_user_prompts.py  get_model.py  grpo_train.py  infer.py  prepare_glaive_sft.py  prepare_hermes_sft.py  prepare_jsonschemabench.py  prepare_jsonschemabench_dpo.py  prepare_jsonschemabench_sft.py  process_data.py  wandb.py
src/notebooks/: generate_data.ipynb
src/test/: analyze_token_lengths.py  evaluate.py  infer.py  make_test_split.py
src/train/: add_function_calling_data.py  extra_install.sh  prepare_dataset.ipynb  qwen3_0.6B_dpo.yaml  qwen3_0.6B_full_guide.yaml  qwen3_1.7B_full_guide.yaml  qwen3_4B_baseline_dpo.yaml  qwen3_4B_baseline_sft.yaml  qwen3_4B_full_guide.yaml  qwen3_4B_glaive_sft.yaml  qwen3_4B_hermes_sft.yaml  qwen3_8B_dpo.yaml  qwen3_8B_full_guide.yaml  qwen3_8B_grpo_sft.yaml  qwen3_8B_rft.yaml  validate_dataset.py
src/utils/: clean_sparse_xlsx.py  crawling.py  crawling_google.py  (+10 more)
utils/: prompt_loader.py
